# sysstatus

./: Cargo.toml  LICENSE  README.md
resources/: config.json
src/: config.rs  main.rs  util.rs
src/components/: disks.rs  general_info.rs  last_login.rs  mod.rs  services.rs  temperature.rs
